<resources>
    <string name="app_name">FPU Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="foodname_label">Name:</string>
    <string name="favorite_label">Favorite:</string>
    <string name="calories_label">Calories per 100g:</string>
    <string name="calories_unit">kcal</string>
    <string name="carbs_label">Carbs per 100g:</string>
    <string name="carbs_unit">g</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="newfood_error_datamissing">Data are missing.</string>
    <string name="newfood_error_carbsorcalbelowzero">Calories as well as carbs must not be negative for food\u0020</string>
    <string name="newfood_error_calslargercarbs1">Cannot save new food\u0020</string>
    <string name="newfood_error_calslargercarbs2">: Calories from carbs (1g ~ 4kcal) of\u0020</string>
    <string name="newfood_error_calslargercarbs3">\u0020larger than total calories of\u0020</string>
    <string name="hint_nofoodfound">No food found yet</string>
    <string name="err_select_at_least_one_food">Select at least one food!</string>
    <string name="amountsmall_label">Small</string>
    <string name="amountmedium_label">Medium</string>
    <string name="amountlarge_label">Large</string>
    <string name="amounttypical_label">Typical portions in grams</string>
    <string name="amount_label">Amount</string>
    <string name="comment_label">Comment</string>
    <string name="newmeal_nofoodselected">No food selected</string>
    <string name="newmeal_customamount">Custom amount</string>
    <string name="unit_gram">g</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="foodcalories_label">Calories</string>
    <string name="foodcarbs_label">Carbs</string>
    <string name="fpu_unit">FPU</string>
    <string name="foodfpu_label">Fat-Protein-Units</string>
    <string name="ecarbs_label">Extended carbs</string>
    <string name="absorptiontime_label">Absorption time</string>
    <string name="absorptiontime_unit">h</string>
    <string name="title_activity_newfood">New Food</string>
    <string name="title_activity_newmeal">New Meal</string>
    <string name="title_activity_calcmeal">Meal Values</string>
    <string name="err_absorptionschemefilenotfound">AbsorptionScheme file not found</string>
    <string name="meal">Total Meal</string>
    <string name="title_activity_editfood">Edit Food</string>
    <string name="backup_complete">Export completed</string>
    <string name="backup_failed">Export failed</string>
    <string name="action_exportdb_raw">Export raw database</string>
    <string name="action_exportdb_json">Export database as JSON</string>
    <string name="backup_cannotwrite">Cannot write to</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="action_editabsorptionscheme">Edit absorption scheme</string>
    <string name="button_reset">Reset</string>
    <string name="hint_absorptionscheme_reset">Absorption scheme reset to default</string>
    <string name="err_newabsorptionblock_maxfpuidentical">Cannot add absorption block: Max. FPU value already exists</string>
    <string name="err_newabsorptionblock_absorptiontime">Cannot add absorption block: Absorption time does not fit to existing values</string>
    <string name="dialog_title_newabsorptionblock">New absorption block</string>
    <string name="dialog_message_newabsorptionblock">Enter the absorption time related to the maximum FPUs</string>
    <string name="category_absorptionscheme">Absorption Scheme</string>
    <string name="preference_maxfpu_key" translatable="false">info.rueth.fpucalculator.preference.maxfpu</string>
    <string name="preference_maxfpu">Maximum FPUs</string>
    <string name="preference_maxfpu_default" translatable="false">20</string>
    <string name="preference_maxfpu_summary">The maximum Fat-Protein-Units that can be selected in the absorption scheme</string>
    <string name="preference_maxabsorptiontime_key" translatable="false">info.rueth.fpucalculator.preference.maxabsorptiontime</string>
    <string name="preference_maxabsorptiontime">Maximum absorption time</string>
    <string name="preference_maxabsorptiontime_default" translatable="false">10</string>
    <string name="preference_maxabsorptiontime_summary">The maximum absorption time that can be selected in the absorption scheme</string>
    <string name="menu_delete_food">Delete</string>
    <string name="menu_edit_food">Edit</string>
    <string name="menu_favorite_add">Set as favorite</string>
    <string name="menu_favorite_remove">Remove from favorites</string>
    <string name="more_icon" translatable="false">&#8942;</string>
    <string name="export_notification_channel_title">FPU Calculator Database Export</string>
    <string name="export_notification_channel_description">Export of the FPU Calculator database</string>
    <string name="export_notification_title">FPU Calculator Database Export</string>
    <string name="export_notification_message">Database is being exported</string>
    <string name="err_directory_not_created">Directory not created:</string>
    <string name="err_filename_missing">Missing file name for database export</string>
    <string name="err_database_not_found">Database not found</string>
    <string name="app_descripton">Calculates carbs, extended carbs (aka. eCarbs or Fake Carbs) and the matching absorption time for individual food or a whole meal.</string>
    <string name="app_documentation_link">Documentation on rueth.info</string>
    <string name="app_github_link">Source code on github.com/UlricusR/FPU_Calculator</string>
    <string name="about_dialog">About</string>
    <string name="err_intentnull">Intent must not be null</string>
    <string name="dbimport_dialog_mode_title">Data import</string>
    <string name="dbimport_dialog_mode_message">Replace or append to existing data?</string>
    <string name="dbimport_dialog_mode_button_replace">Replace</string>
    <string name="dbimport_dialog_mode_button_append">Append</string>
    <string name="action_importdb_json">Import database from JSON</string>
    <string name="import_notification_channel_title">FPU Calculator Database Import</string>
    <string name="import_notification_channel_description">Import of the FPU Calculator database</string>
    <string name="import_notification_title">FPU Calculator Database Import</string>
    <string name="import_notification_message">FPU Calculator data are being imported</string>
    <string name="import_complete">Import completed</string>
    <string name="import_failed">Import failed</string>
    <string name="delete_confirm_message">Really delete food?</string>
    <string name="delete_confirm_title">Delete food</string>
    <string name="button_delete">Delete</string>
    <string name="disclaimer_dialog_title">Disclaimer</string>
    <string name="disclaimer_dialog_message">Applying the nutrition information calculated by this app in a Diabetes therapy may bear the risk of high or low blood glucose values. Use at your own risk!</string>
    <string name="disclaimer_dialog_button_accept">Accept</string>
    <string name="disclaimer_dialog_button_decline">Decline</string>
    <string name="err_nononnegativeinteger">Input contains invalid character, only digits 0 to 9 allowed</string>
    <string name="err_maxvaluelessthanusedvalue">Maximum value cannot be less than largest value in use</string>
    <string name="err_cannotcreatepreferences">Error creating preferences</string>
    <string name="category_database">Database</string>
    <string name="preference_dbexport_json_key" translatable="false">info.rueth.fpucalculator.preference.dbexport_json</string>
    <string name="preference_dbexport_json">Export as JSON file</string>
    <string name="preference_dbimport_json_key" translatable="false">info.rueth.fpucalculator.preference.dbimport_json</string>
    <string name="preference_dbimport_json">Import as JSON file</string>
    <string name="preference_dbexport_raw_key" translatable="false">info.rueth.fpucalculator.preference.dbexport_raw</string>
    <string name="preference_dbexport_raw">Export RAW database</string>
</resources>
