<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="category_absorptionscheme"
        android:title="@string/category_absorptionscheme">

        <EditTextPreference
            android:key="@string/preference_maxfpu_key"
            android:title="@string/preference_maxfpu"
            android:summary="@string/preference_maxfpu_summary"
            android:defaultValue="@string/preference_maxfpu_default"
            android:inputType="numberDecimal"/>

        <EditTextPreference
            android:key="@string/preference_maxabsorptiontime_key"
            android:title="@string/preference_maxabsorptiontime"
            android:summary="@string/preference_maxabsorptiontime_summary"
            android:defaultValue="@string/preference_maxabsorptiontime_default"
            android:inputType="numberDecimal"/>

    </PreferenceCategory>

</PreferenceScreen>