<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/calcmeal_fpu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/foodfpu_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/absorptionblock_fpu_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/calcmeal_fpu_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcmeal_fpu_label" />

    <TextView
        android:id="@+id/calcmeal_fpu_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fpu_unit"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/calcmeal_fpu_label" />

    <TextView
        android:id="@+id/calcmeal_absorptiontime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/absorptiontime_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/calcmeal_fpu_label"
        app:layout_constraintStart_toStartOf="@+id/guideline_center" />

    <Spinner
        android:id="@+id/absorptionblock_absorptiontime_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/calcmeal_absorptiontime_unit"
        app:layout_constraintStart_toStartOf="@id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/calcmeal_absorptiontime_label" />

    <TextView
        android:id="@+id/calcmeal_absorptiontime_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/absorptiontime_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcmeal_absorptiontime_label" />


</android.support.constraint.ConstraintLayout>